--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--stylesheet -->
 <link href="style.css" rel="stylesheet" />
+<!--javascript-->
+<script src="hello.js"></script>
 
     <title>Tier 1 Summary</title>
 </head>
